--- a/命令.md
+++ b/命令.md
@@ -158,9 +158,36 @@ yum            Yellow dog包管理工具
 ```
 sudo dpkg --configure -a
 sudo apt -f install
+
+ # python2.7
+cd /var/lib/dpkg  
+sudo mv info info.bak  
+sudo mkdir info
 ```
 
-### 
+### java
+
+```
+sudo update-alternatives --install /usr/bin/java java /usr/java/jdk18/bin/java 300
+sudo update-alternatives --install /usr/bin/javac javac /usr/java/jdk18/bin/javac 300
+sudo update-alternatives --config java
+sudo update-alternatives --config javac
+
+# jdk /etc/profile
+export JAVA_HOME=/usr/jdk
+export JRE_HOME=${JAVA_HOME}/jre
+export CLASSPATH=:${JAVA_HOME}/lib:${JRE_HOME}/lib:$CLASSPATH
+export PATH=${JAVA_HOME}/bin:${JRE_HOME}/bin:$PATH
+```
+
+### 环境变量
+
+```
+vim /etc/environment
+vim /etc/profile
+```
+
+
 
 ## 6. 系统管理命令
 
@@ -323,6 +350,11 @@ sudo update-rc.d xrdp defaults
 ```
 deb http://mirrors.tuna.tsinghua.edu.cn/raspbian/raspbian/ stretch main contrib non-free rpi
 deb-src http://mirrors.tuna.tsinghua.edu.cn/raspbian/raspbian/ stretch main contrib non-free rpi
+
+deb http://mirrors.ustc.edu.cn/raspbian/raspbian/ jessie main contrib non-free rpi
+
+deb http://mirrors.aliyun.com/raspbian/raspbian/ wheezy main non-free contrib
+deb-src http://mirrors.aliyun.com/raspbian/raspbian/ wheezy main non-free contrib
 ```
 
 ### wiringpi
@@ -352,9 +384,32 @@ sudo vi /boot/config.txt
 +: dtoverlay=pi3-miniuart-bat
 ```
 
-### 
+### video0
+
+```
+/etc/modules中添加bcm2835-v4l2
+```
+
+
 
 ## 11. FriendlyARM
+
+### 源
+
+```
+deb http://mirrors.ustc.edu.cn/ubuntu-ports/ xenial main multiverse restricted universe
+deb http://mirrors.ustc.edu.cn/ubuntu-ports/ xenial-backports main multiverse restricted universe
+deb http://mirrors.ustc.edu.cn/ubuntu-ports/ xenial-proposed main multiverse restricted universe
+deb http://mirrors.ustc.edu.cn/ubuntu-ports/ xenial-security main multiverse restricted universe
+deb http://mirrors.ustc.edu.cn/ubuntu-ports/ xenial-updates main multiverse restricted universe
+deb-src http://mirrors.ustc.edu.cn/ubuntu-ports/ xenial main multiverse restricted universe
+deb-src http://mirrors.ustc.edu.cn/ubuntu-ports/ xenial-backports main multiverse restricted universe
+deb-src http://mirrors.ustc.edu.cn/ubuntu-ports/ xenial-proposed main multiverse restricted universe
+deb-src http://mirrors.ustc.edu.cn/ubuntu-ports/ xenial-security main multiverse restricted universe
+deb-src http://mirrors.ustc.edu.cn/ubuntu-ports/ xenial-updates main multiverse restricted universe
+```
+
+
 
 ### GPIO
 
@@ -378,6 +433,32 @@ AR	ar
 CC	cc
 CPP	cpp
 RM	rm -f
+```
+
+```
+
+CC = g++
+# 可执行文件
+TARGET = test
+# C文件
+SRCS = test.cpp
+# 目标文件
+OBJS = $(SRCS:.cpp=.o)
+# 库文件
+DLIBS = -lopencv_core -lopencv_imgproc -lopencv_highgui
+# 链接为可执行文件
+$(TARGET):$(OBJS)
+ $(CC) -o $@ $^ $(DLIBS)
+clean:
+ rm -rf $(TARGET) $(OBJS)
+# 编译规则 $@代表目标文件 $< 代表第一个依赖文件
+%.o:%.cpp
+ $(CC) -o $@ -c $<
+--------------------- 
+作者：xukai871105 
+来源：CSDN 
+原文：https://blog.csdn.net/xukai871105/article/details/41084949 
+版权声明：本文为博主原创文章，转载请附上博文链接！
 ```
 
 
@@ -469,6 +550,12 @@ gcc hello.c libFOO.so    # 链接库文件
 ```
 ~/.bashrc
 export PATH=$PATH:/ope/ctools/arm-2014.5/bin/
+```
+
+### SPI
+
+```
+gpio load spi
 ```
 
 
