--- a/命令.md
+++ b/命令.md
@@ -27,7 +27,18 @@ vi             文本编辑工具
 
 userdel        删除用户
 usermod        修改用户属性
-passwd         设置密码
+
+### passwd         设置密码
+
+```
+修改root密码
+>recovery mode
+ro 改成rw，把ro所在行之后的内容删除，添加single init=/bin/bash
+重启
+#sync
+#reboot -f
+```
+
 groupadd       添加组
 groupmod       修改组属性
 groupdel       删除组
@@ -103,6 +114,9 @@ alias rm="rm -i"
 
 ```
 sudo shutdown -h now
+
+#sync
+#reboot -f
 ```
 
 
@@ -168,13 +182,13 @@ sudo mkdir info
 ### java
 
 ```
-sudo update-alternatives --install /usr/bin/java java /usr/java/jdk18/bin/java 300
-sudo update-alternatives --install /usr/bin/javac javac /usr/java/jdk18/bin/javac 300
+sudo update-alternatives --install /usr/bin/java java /usr/local/jdk18/bin/java 300
+sudo update-alternatives --install /usr/bin/javac javac /usr/local/jdk18/bin/javac 300
 sudo update-alternatives --config java
 sudo update-alternatives --config javac
 
 # jdk /etc/profile
-export JAVA_HOME=/usr/jdk
+export JAVA_HOME=/usr/local/jdk18
 export JRE_HOME=${JAVA_HOME}/jre
 export CLASSPATH=:${JAVA_HOME}/lib:${JRE_HOME}/lib:$CLASSPATH
 export PATH=${JAVA_HOME}/bin:${JRE_HOME}/bin:$PATH
@@ -274,11 +288,22 @@ netstat -anp
 kill -9	
 ```
 
-### 
-
 ## 9. 网络基础类命令
 
-ifconfig       查看／设置网卡参数
+### ifconfig       查看／设置网卡参数
+
+```
+# vi /etc/network/interfaces
+    auto eth0
+    iface eth0 inet static
+    address 192.168.2.102
+    netmask 255.255.255.0
+    gateway 192.168.2.1
+    broadcast 192.168.2.255
+    auto eth1
+    iface eth1 inet dhcp
+# /etc/init.d/networking restart
+```
 
 ifup           启用网络设备
 
@@ -340,6 +365,25 @@ sudo apt-get install xrdp
 sudo /etc/init.d/xrdp start
 sudo update-rc.d xrdp defaults
 ```
+
+### 有线网络 
+
+```
+1.  ifconfig ethtool 
+2.  #ifconfig eth0 192.168.1.120
+    #ifconfig eth0
+3.  #udhcpc -i eth0
+4.  # ifconfig eth0 hw ether 08:90:90:90:90:90
+5.  # ifconfig eth0 netmask 255.255.255.0
+6.  # ifconfig eth0 broadcast 192.168.1.120
+7.  # route add default gw 192.168.1.1
+	# route del default gw 192.168.1.1
+8.  # ifconfig eth0 down
+	# ifconfig eth0 up
+
+```
+
+
 
 
 
@@ -681,8 +725,6 @@ if __name__=="__main__":
 ```
 
 
-
-### 
 
 ## 13. Python
 
